--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ description = "The Official mustafif.com web application"
 mkblogs_rss = { git = "https://github.com/Mustafif/MKBlogsRSS", version = "0.1.0" }
 rocket = "0.5.0"
 rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
-
+openssl = { version = "0.10" }
 [profile.release]
 strip = true  # Automatically strip symbols from the binary.
 lto = true # Enables link time optimizations to optimize at link-stage
