--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ mkblogs_rss = { git = "https://github.com/Mustafif/MKBlogsRSS", version = "0.1.2
 rocket = "0.5.0"
 rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
 serde = "1.0.196"
+shuttle = "0.7.1"
+shuttle-rocket = "0.46.0"
+shuttle-runtime = "0.46.0"
 toml = "0.8.8"
 [profile.release]
 strip = true  # Automatically strip symbols from the binary.
